--- a/tasks/monitoring.yml
+++ b/tasks/monitoring.yml
@@ -25,6 +25,10 @@
         dest: /usr/local/etc/.my.cnf
         owner: '{{ mariadb_monitoring_user }}'
         mode: 0644
-  when: (
-    (mariadb_monitoring_user  is defined and mariadb_monitoring_user | length != 0) and
-    (mariadb_monitoring       is defined and mariadb_monitoring ))
+  when:
+    - mariadb_monitoring_user is defined
+    - mariadb_monitoring_user | length != 0
+    - mariadb_monitoring is defined
+    - mariadb_monitoring
+
+...
