--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -9,14 +9,14 @@
     - ansible_os_family | lower == 'debian'
 
 - block:
-    - name: ensure mariadb packages are installed (centos < 8)
-      package:
-        name: "{{ mariadb_packages }}"
-        state: present
-        use: yum
-      register: mariadb_install_packages
-      when:
-        - ansible_distribution_version | int < 8
+    # - name: ensure mariadb packages are installed (centos < 8)
+    #   package:
+    #     name: "{{ mariadb_packages }}"
+    #     state: present
+    #     use: yum
+    #   register: mariadb_install_packages
+    #   when:
+    #     - ansible_distribution_version | int < 8
 
     - name: ensure mariadb packages are installed (centos >= 8)
       package:
@@ -24,8 +24,8 @@
         state: present
         use: dnf
       register: mariadb_install_packages
-      when:
-        - ansible_distribution_version | int >= 8
+      #when:
+      #  - ansible_distribution_version | int >= 8
 
   when:
     - ansible_os_family | lower == 'redhat'
