--- a/tasks/preparations.yml
+++ b/tasks/preparations.yml
@@ -1,15 +1,39 @@
 ---
 
-- block:
-    - name: ensure the ansible_python_interpreter is set to python2
-      set_fact:
-        ansible_python_interpreter: python2
-
-    - name: do facts module to get latest information
-      setup:
+- name: make sure dnf is installed (only redhat based <7)
+  package:
+    name: dnf
+    state: present
   when:
     - ansible_os_family | lower == 'redhat'
     - ansible_distribution_version | int < 8
+
+- name: ensure the ansible_python_interpreter is set to python2 (only redhat based <7)
+  set_fact:
+    ansible_python_interpreter: python2
+  when:
+    - ansible_os_family | lower == 'redhat'
+    - ansible_distribution_version | int < 8
+
+- name: detect python3
+  stat:
+    path: /usr/bin/python3
+  register: python3_bin_present
+  changed_when: not python3_bin_present.stat.exists
+
+- name: ensure the ansible_python_interpreter is set to python3
+  set_fact:
+    ansible_python_interpreter: /usr/bin/python3
+  when:
+    - ansible_python.version.major == 2
+    - python3_bin_present.stat.exists
+
+- name: do facts module to get latest information
+  setup:
+
+- name: ''
+  debug:
+    msg: "{{ ansible_python_interpreter }}"
 
 - block:
     - name: add mariadb repository
