--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -1,12 +1,12 @@
 ---
 
-- name: ensure mariadb packages are installed (debian)
+- name: ensure mariadb packages are installed
   package:
     name: "{{ mariadb_packages }}"
     state: present
   register: mariadb_install_packages
   when:
-    - ansible_os_family | lower == 'debian'
+    - ansible_os_family | lower != 'redhat'
 
 - block:
     # - name: ensure mariadb packages are installed (centos < 8)
@@ -30,53 +30,62 @@
   when:
     - ansible_os_family | lower == 'redhat'
 
-- name: create requirements.txt
-  template:
-    src: requirements.txt.j2
-    dest: /tmp/mariadb-requirements.txt
-    mode: 0660
+- name: python support
+  block:
+    - name: create requirements.txt
+      template:
+        src: requirements.txt.j2
+        dest: /tmp/mariadb-requirements.txt
+        mode: 0660
 
-- name: ensure python bindings for mariadb packages 1st
-  pip:
-    executable: pip3
-    requirements: /tmp/mariadb-requirements.txt
-    state: present
-  register: pip_install
-  ignore_errors: true
-  no_log: true
-  # register: mariadb_install_python_packages
-
-- block:
-    - name: install build essentials
-      package:
-        name:
-          - mariadb-devel
-          - gcc
-          - gcc-c++
-          - autoconf
-          - automake
-        state: present
-
-    - name: ensure python bindings for mariadb packages 2nd
+    - name: ensure python bindings for mariadb packages 1st
       pip:
+        executable: pip3
         requirements: /tmp/mariadb-requirements.txt
         state: present
+      register: pip_install
+      ignore_errors: true
+      # no_log: true
+      register: mariadb_install_python_packages
 
-    - name: uninstall build essentials
-      package:
-        name:
-          - mariadb-devel
-          - gcc
-          - gcc-c++
-          - autoconf
-          - automake
+    - name: ''
+      debug:
+        msg: "{{ mariadb_install_python_packages }}"
+
+    - block:
+        - name: install build essentials
+          package:
+            name:
+              - mariadb-devel
+              - gcc
+              - gcc-c++
+              - autoconf
+              - automake
+            state: present
+
+        - name: ensure python bindings for mariadb packages 2nd
+          pip:
+            requirements: /tmp/mariadb-requirements.txt
+            state: present
+
+        - name: uninstall build essentials
+          package:
+            name:
+              - mariadb-devel
+              - gcc
+              - gcc-c++
+              - autoconf
+              - automake
+            state: absent
+
+      when:
+        - pip_install.failed
+
+    - name: remove requirements.txt
+      file:
+        path: /tmp/mariadb-requirements.txt
         state: absent
-
-  when: pip_install.failed
-
-- name: remove requirements.txt
-  file:
-    path: /tmp/mariadb-requirements.txt
-    state: absent
-
+  when:
+    - mariadb_python_packages is defined
+    - mariadb_python_packages | length > 0
 ...
