--- a/tasks/prepare.yaml
+++ b/tasks/prepare.yaml
@@ -1,5 +1,18 @@
 ---
 
+- name: include OS specific configuration
+  include_vars: "{{ lookup('first_found', findme) }}"
+  vars:
+    findme:
+      paths:
+        - "vars"
+      files:
+        - "{{ ansible_distribution | lower }}-{{ ansible_distribution_major_version }}.yaml"
+        - "{{ ansible_distribution | lower }}.yaml"
+        - "{{ ansible_os_family | lower }}.yaml"
+        - default.yaml
+      skip: true
+
 - name: make sure dnf is installed (only redhat based <7)
   package:
     name: dnf
@@ -31,9 +44,9 @@
 - name: do facts module to get latest information
   setup:
 
-- name: ''
-  debug:
-    msg: "{{ ansible_python_interpreter }}"
+# - name: ''
+#   debug:
+#     msg: "{{ ansible_python_interpreter }}"
 
 - block:
     - name: add mariadb repository
