--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,13 +2,13 @@
 
 - include_tasks: prepare.yaml
 
-- include_tasks: detect_mariadb_version.yml
+# - include_tasks: detect_mariadb_version.yml
 
-- include_tasks: installation.yml
+# - include_tasks: installation.yml
 
-# - name: configure mariadb
-#   include_tasks: configure.yml
-#
+- name: configure mariadb
+  include_tasks: configure.yml
+
 # - name: security changes
 #   include_tasks: secure-installation.yml
 #
