--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,6 +31,177 @@ mariadb_enabled_on_startup: true
 # update my.cnf. each time role is run? true | false
 overwrite_global_mycnf: true
 
+# config settings
+# every ini part like [mysqld, galera, embedded, ...] becomes an own segment
+
+mariadb_config:
+  # this is read by the standalone daemon and embedded servers
+  server: {}
+  # These groups are read by MariaDB command-line tools
+  mysql:
+    default-character-set: utf8mb4
+  # this is only for the mysqld standalone daemon
+  mysqld:
+    user: mysql
+    pid-file: /var/run/mysqld/mysqld.pid
+    socket: /var/lib/mysql/mysql.sock
+    port: 3306
+    basedir: /usr
+    datadir: /var/lib/mysql
+    tmpdir: /tmp
+    lc-messages-dir: /usr/share/mysql
+    skip-external-locking:
+    bind-address: '127.0.0.1'
+    query_cache_type: "0"
+    query_cache_limit: "16M"
+    query_cache_size: "3M"
+    mariadb_default_character_set: utf8mb4
+    character-set-server: utf8mb4
+    collation-server: utf8mb4_general_ci
+    # When making adjustments, make mariadb_tmp_table_size and
+    # mariadb_max_heap_table_size equal
+    tmp_table_size: "64M"
+    max_heap_table_size: "64M"
+    join_buffer_size: "262144"
+    # * Fine Tuning
+    key_buffer_size: "{{ mariadb_key_buffer_size }}"
+    max_allowed_packet: "{{ mariadb_max_allowed_packet }}"
+    thread_stack: 192K
+    thread_cache_size: "{{ mariadb_thread_cache_size }}"
+    # This replaces the startup script and checks MyISAM tables if needed
+    # the first time they are touched
+    myisam_recover_options: BACKUP
+    max_connections: "{{ mariadb_max_connections }}"
+    # table_cache            = 64
+    # thread_concurrency     = 10
+    # Skip reverse DNS lookup of clients
+    skip-name-resolve:
+    # enable performance schema
+    performance_schema: 1
+    #
+    # # * InnoDB
+    # #
+    # # InnoDB is enabled by default with a 10MB datafile in /var/lib/mysql/.
+    # # Read the manual for more InnoDB related options. There are many!
+    #
+    # {% if mariadb_supports_innodb_large_prefix %}
+    # innodb_large_prefix     = {{ mariadb_innodb_large_prefix }}
+    # {% if mariadb_innodb_file_format is defined and  mariadb_innodb_file_format != '' %}
+    # innodb_file_format      = {{ mariadb_innodb_file_format }}
+    # {% endif %}
+    # {% endif %}
+    # innodb_file_per_table   = {{ mariadb_innodb_file_per_table }}
+    # innodb_buffer_pool_size = {{ mariadb_innodb_buffer_pool_size }}
+    # innodb_log_file_size    = {{ mariadb_innodb_log_file_size }}
+    # innodb_log_buffer_size  = {{ mariadb_innodb_log_buffer_size }}
+    # innodb_flush_log_at_trx_commit = {{ mariadb_innodb_flush_log_at_trx_commit }}
+    # innodb_lock_wait_timeout = {{ mariadb_innodb_lock_wait_timeout }}
+    #
+    # {% if mariadb_innodb_data_file_path is defined and mariadb_innodb_data_file_path != '' %}
+    # innodb_data_file_path    = {{ mariadb_innodb_data_file_path }}
+    # {% endif %}
+    #
+    # # Logging configuration.
+    # {% if mariadb_log_error == 'syslog' or mariadb_log == 'syslog' %}
+    # syslog
+    # syslog-tag = {{ mariadb_syslog_tag }}
+    # {% else %}
+    # {% if mariadb_log %}
+    # #log = {{ mariadb_log }}
+    # {% endif %}
+    # log-error = {{ mariadb_log_error }}
+    # {% endif %}
+    #
+    # {% if mariadb_slow_query_log_enabled %}
+    # # Slow query log configuration.
+    # slow_query_log = 1
+    # slow_query_log_file = {{ mariadb_slow_query_log_file }}
+    # long_query_time = {{ mariadb_slow_query_time }}
+    # {% endif %}
+    #
+    # {% if mariadb_replication_master %}
+    # # The following can be used as easy to replay backup logs or for replication.
+    # # note: if you are setting up a replication slave, see README.Debian about
+    # #       other settings you may need to change.
+    # server-id                = {{ mariadb_server_id }}
+    #
+    #   {% if mariadb_replication_role == 'master' %}
+    # log_bin                  = {{ mariadb_log_bin | default('/var/log/mysql/mysql-bin.log') }}
+    # log_bin_index            = {{ mariadb_log_bin_index | default('/var/log/mysql/mysql-bin.index') }}
+    #
+    # expire_logs_days         = {{ mariadb_expire_logs_days }}
+    # max_binlog_size          = {{ mariadb_max_binlog_size }}
+    #
+    #     {% for db in mariadb_databases %}
+    #       {% if db.replicate|default(1) %}
+    #
+    # binlog_do_db             = {{ db.name }}
+    #       {% else %}
+    # binlog_ignore_db         = {{ db.name }}
+    #       {% endif %}
+    #     {% endfor %}
+    #   {% endif %}
+    #
+    #   {% if mariadb_replication_role == 'slave' %}
+    # read_only
+    # relay-log                = relay-bin
+    # relay-log-index          = relay-bin.index
+    #   {% endif %}
+    # {% endif %}
+    #
+    # # For generating SSL certificates you can use for example the GUI tool "tinyca".
+    # #
+    # # ssl-ca=/etc/mysql/cacert.pem
+    # # ssl-cert=/etc/mysql/server-cert.pem
+    # # ssl-key=/etc/mysql/server-key.pem
+    # #
+    # # Accept only connections using the latest and most secure TLS protocol version.
+    # # ..when MariaDB is compiled with OpenSSL:
+    # # ssl-cipher=TLSv1.2
+    # # ..when MariaDB is compiled with YaSSL (default in Debian):
+    # # ssl=on
+
+  # NOTE: This file is read only by the traditional SysV init script, not systemd.
+  mysqld_safe:
+    socket: "{{ mariadb_socket }}"
+    nice: "0"
+    # skip_log_error  xx
+    # syslog
+    log-error: /var/log/mysql/mysql.err
+  galera: {}
+  # this is only for embedded server
+  embedded: {}
+  # This group is only read by MariaDB servers, not by MySQL.
+  mariadb: {}
+  # This group is only read by MariaDB-$VERSION servers.
+  #mariadb-10.1: {}
+  #mariadb-10.5: {}
+  # This group is read by the client library
+  client:
+    default-character-set: "{{ mariadb_default_character_set }}"
+    socket: "{{ mariadb_socket }}"
+    # Example of client certificate usage
+    # ssl-cert=/etc/mysql/client-cert.pem
+    # ssl-key=/etc/mysql/client-key.pem
+    #
+    # Allow only TLS encrypted connections
+    # ssl-verify-server-cert=on
+
+  # This group is *never* read by mysql client library
+  client-mariadb: {}
+  mysql_upgrade: {}
+  mysqladmin: {}
+  mysqlbinlog: {}
+  mysqlcheck: {}
+  mysqldump:
+    quick: ""
+    quote-names: ""
+    max_allowed_packet: "{{ mariadb_mysqldump_max_allowed_packet }}"
+  mysqlimport: {}
+  mysqlshow: {}
+  mysqlslap: {}
+
+
 # MySQL connection settings.
 mariadb_port: 3306
 mariadb_bind_address: '127.0.0.1'
