--- a/vars/redhat.yaml
+++ b/vars/redhat.yaml
@@ -1,1 +1,56 @@
- 
+---
+
+systemd_lib_directory: "/usr/lib/systemd/system"
+
+mariadb_packages:
+  - mariadb
+  - mariadb-common
+  - mariadb-server
+  - python3-setuptools
+
+mariadb_build_packages:
+  - mariadb-devel
+  - gcc
+  - gcc-c++
+  - autoconf
+  - automake
+  - python3-devel
+
+mariadb_python_packages:
+  - name: mysqlclient
+
+# CENTOS-8:
+#  # ls -1 /etc/my.cnf.d/
+#  auth_gssapi.cnf
+#  client.cnf
+#  enable_encryption.preset
+#  mariadb-server.cnf
+#  mysql-clients.cnf
+
+# ORACLELINUX 8:
+#  # ls -1 /etc/my.cnf.d/
+#  client.cnf
+#  enable_encryption.preset
+#  mariadb-server.cnf
+#  mysql-clients.cnf
+
+mariadb_config_file: /etc/my.cnf
+
+mariadb_config_dir: /etc/my.cnf.d
+mariadb_config_include_dir: "{{ mariadb_config_dir }}"
+
+mariadb_log_directory: "/var/log/mysql"
+mariadb_slow_query_log_file: "{{ mariadb_log_directory }}/mysql-slow.log"
+mariadb_log_error: "{{ mariadb_log_directory }}/mysql.error"
+
+mariadb_pid_file: "/run/mysqld/mysqld.pid"
+
+mariadb_server: "mariadb-server"
+
+mariadb_service: "mariadb"
+
+mariadb_messages_dir: "/usr/share/mysql"
+
+mariadb_socket: "/var/lib/mysql/mysql.sock"
+
+...
