change config handling

--- a/molecule/default/group_vars/all/vars.yml
+++ b/molecule/default/group_vars/all/vars.yml
@@ -18,3 +18,16 @@ mariadb_users:
     host: '%'
     password: molecule
     priv: "molecule.*:ALL"
+
+mariadb_config_mysqld:
+  socket: "{{ mariadb_socket }}"
+  skip-external-locking:
+  # Skip reverse DNS lookup of clients
+  skip-name-resolve: 1
+  # enable performance schema
+  performance_schema: 1
+  datadir: /opt/mariadb/data
+  tmpdir: /opt/mariadb/tmp
+  log_error: /opt/mariadb/log/error.log
+  slow_query_log_file: /opt/mariadb/log/mysql-slow.log
+  expire_logs_days: 2
