--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -30,173 +30,155 @@
     group: root
     mode: 0644
     backup: true
+  notify:
+    - restart mariadb
 
-# - name: create configuration files
-#   template:
-#     src: "{{ item.src }}"
-#     dest: "{{ item.dest }}"
-#     owner: root
-#     group: root
-#     mode: 0644
-#   with_items:
-#     - src: etc/mysql/my.cnf.j2
-#       dest: "{{ mariadb_config_dir }}/my.cnf"
-#     - src: etc/mysql/mariadb.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.cnf'
-#     - src: etc/mysql/my.cnf.fallback.j2
-#       dest: '{{ mariadb_config_dir }}/my.cnf.fallback'
-#     - src: etc/mysql/conf.d/mysql.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/conf.d/mysql.cnf'
-#     - src: etc/mysql/conf.d/mysqldump.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/conf.d/mysqldump.cnf'
-#     - src: etc/mysql/mariadb.conf.d/50-client.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/50-client.cnf'
-#     - src: etc/mysql/mariadb.conf.d/59-client-security.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-client-security.cnf'
-#     - src: etc/mysql/mariadb.conf.d/50-mysql-clients.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/50-mysql-clients.cnf'
-#     - src: etc/mysql/mariadb.conf.d/50-mysqld_safe.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/50-mysqld_safe.cnf'
-#     - src: etc/mysql/mariadb.conf.d/50-server.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/50-server.cnf'
-#     - src: etc/mysql/mariadb.conf.d/59-server-replication.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-replication.cnf'
-#     - src: etc/mysql/mariadb.conf.d/59-server-logging.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-logging.cnf'
-#     - src: etc/mysql/mariadb.conf.d/59-server-innodb.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-innodb.cnf'
-#     - src: etc/mysql/mariadb.conf.d/59-server-finetuning.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-finetuning.cnf'
-#     - src: etc/mysql/mariadb.conf.d/59-server-security.cnf.j2
-#       dest: '{{ mariadb_config_dir }}/mariadb.conf.d/59-server-security.cnf'
-#   register: configuration
-#   loop_control:
-#     label: "{{ item.dest }}"
-#   notify:
-#     - restart mariadb
+- name: create data directory '{{ mariadb_config_mysqld.datadir }}'
+  file:
+    path: "{{ mariadb_config_mysqld.datadir }}"
+    state: directory
+    owner: mysql
+    group: mysql
+    mode: 0755
+  when:
+    - mariadb_config_mysqld.datadir is defined
+    - mariadb_config_mysqld.datadir != "/var/lib/mysql"
 
-# - name: create data directory '{{ mariadb_datadir }}'
-#   file:
-#     path: "{{ mariadb_datadir }}"
-#     state: directory
-#     owner: mysql
-#     group: mysql
-#     mode: 0755
-#
-# - name: create tmp directory '{{ mariadb_tmpdir }}'
-#   file:
-#     path: "{{ mariadb_tmpdir }}"
-#     state: directory
-#     owner: mysql
-#     group: mysql
-#     mode: 0755
-#   when:
-#     - mariadb_tmpdir != '/tmp'
-#     - mariadb_tmpdir is defined
-#     - mariadb_tmpdir | length != 0
-#
-# - name: create log directory '{{ mariadb_log_directory }}'
-#   file:
-#     path: "{{ mariadb_log_directory }}"
-#     state: directory
-#     owner: mysql
-#     group: mysql
-#     mode: 0755
-#   when:
-#     - mariadb_log_directory is defined
-#     - mariadb_log_directory | length != 0
-#
-# - name: create pid directory '{{ mariadb_pid_file | dirname }}'
-#   file:
-#     path: "{{ mariadb_pid_file | dirname }}"
-#     state: directory
-#     owner: mysql
-#     group: mysql
-#     mode: 0755
-#   when:
-#     - mariadb_pid_file is defined
-#     - mariadb_pid_file | length != 0
-#
-# # - block:
-# #     - name: create {{ systemd_lib_directory }}/{{ mariadb_service }}.service.d
-# #       file:
-# #         path: "{{ systemd_lib_directory }}/{{ mariadb_service }}.service.d"
-# #         state: directory
-# #         mode: 0750
-# #
-# #     - name: create overwrite.conf for systemd
-# #       template:
-# #         src: systemd/overwrite.conf.j2
-# #         dest: "{{ systemd_lib_directory }}/{{ mariadb_service }}.service.d/override.conf"
-# #         mode: 0440
-# #       notify:
-# #         - systemctl daemon-reload
-# #
-# #   when:
-# #     - ansible_service_mgr == "systemd"
-#
+- name: create tmp directory '{{ mariadb_config_mysqld.tmpdir }}'
+  file:
+    path: "{{ mariadb_config_mysqld.tmpdir }}"
+    state: directory
+    owner: mysql
+    group: mysql
+    mode: 0755
+  when:
+    - mariadb_config_mysqld.tmpdir is defined
+    - mariadb_config_mysqld.tmpdir != "/tmp"
+    - mariadb_config_mysqld.tmpdir | length > 0
+
+- name: create pid directory '{{ mariadb_config_mysqld["pid-file"] | dirname }}'
+  file:
+    path: "{{ mariadb_config_mysqld['pid-file'] | dirname }}"
+    state: directory
+    owner: mysql
+    group: mysql
+    mode: 0755
+  when:
+    - mariadb_config_mysqld['pid-file'] is defined
+    - mariadb_config_mysqld['pid-file'] | length > 0
+
 # - block:
-#     - name: create slow query log file
+#     - name: create {{ systemd_lib_directory }}/{{ mariadb_service }}.service.d
 #       file:
-#         path: "{{ mariadb_slow_query_log_file }}"
-#         state: touch
-#         owner: mysql
-#         group: "{{ mariadb_log_file_group }}"
-#         mode: 0640
+#         path: "{{ systemd_lib_directory }}/{{ mariadb_service }}.service.d"
+#         state: directory
+#         mode: 0750
 #
-#     - name: set ownership on slow query log file
-#       file:
-#         path: "{{ mariadb_slow_query_log_file }}"
-#         state: file
-#         owner: mysql
-#         group: "{{ mariadb_log_file_group }}"
-#         mode: 0640
+#     - name: create overwrite.conf for systemd
+#       template:
+#         src: systemd/overwrite.conf.j2
+#         dest: "{{ systemd_lib_directory }}/{{ mariadb_service }}.service.d/override.conf"
+#         mode: 0440
+#       notify:
+#         - systemctl daemon-reload
 #
 #   when:
-#     - mariadb_slow_query_log_enabled
-#
-# - block:
-#     - name: create error log file
-#       file:
-#         path: "{{ mariadb_log_error }}"
-#         state: touch
-#         owner: mysql
-#         group: "{{ mariadb_log_file_group }}"
-#         mode: 0640
-#
-#     - name: set ownership on error log file
-#       file:
-#         path: "{{ mariadb_log_error }}"
-#         state: file
-#         owner: mysql
-#         group: "{{ mariadb_log_file_group }}"
-#         mode: 0640
-#
-#   when:
-#     - mariadb_log | length == 0
-#     - mariadb_log_error | length != 0
-#
-# - name: configure swappiness
-#   sysctl:
-#     name: vm.swappiness
-#     value: "{{ mariadb_swappiness | int }}"
-#     state: present
-#   when:
-#     - mariadb_configure_swappiness | bool
-#
-# - name: ensure mariadb is started and enabled on boot
+#     - ansible_service_mgr == "systemd"
+
+- block:
+    - name: create log directory '{{ mariadb_config_mysqld.slow_query_log_file }}'
+      file:
+        path: "{{ mariadb_config_mysqld.slow_query_log_file | dirname }}"
+        state: directory
+        owner: mysql
+        group: adm
+        mode: 0775
+
+    - name: create slow query log file '{{ mariadb_config_mysqld.slow_query_log_file }}'
+      file:
+        path: "{{ mariadb_config_mysqld.slow_query_log_file }}"
+        state: touch
+        owner: mysql
+        group: mysql
+        mode: 0666
+      changed_when: false
+
+    - name: set ownership on slow query log file
+      file:
+        path: "{{ mariadb_config_mysqld.slow_query_log_file }}"
+        state: file
+        owner: mysql
+        group: mysql
+        mode: 0666
+  when:
+    - mariadb_config_mysqld.slow_query_log_file is defined
+    - mariadb_config_mysqld.slow_query_log_file | length > 0
+    # - mariadb_slow_query_log_enabled
+
+- block:
+    - name: create log directory '{{ mariadb_config_mysqld.log_error }}'
+      file:
+        path: "{{ mariadb_config_mysqld.log_error | dirname }}"
+        state: directory
+        owner: mysql
+        group: adm
+        mode: 0775
+
+    - name: create error log file '{{ mariadb_config_mysqld.log_error }}'
+      file:
+        path: "{{ mariadb_config_mysqld.log_error }}"
+        state: touch
+        owner: mysql
+        group: mysql
+        mode: 0666
+      changed_when: false
+
+    - name: set ownership on error log file
+      file:
+        path: "{{ mariadb_config_mysqld.log_error }}"
+        state: file
+        owner: mysql
+        group: mysql
+        mode: 0666
+  when:
+    - mariadb_config_mysqld.log_error is defined
+    - mariadb_config_mysqld.log_error | length > 0
+
+- name: configure swappiness
+  sysctl:
+    name: vm.swappiness
+    value: "{{ mariadb_swappiness | int }}"
+    state: present
+  when:
+    - mariadb_configure_swappiness | bool
+
+# TODO
+# detect bootstrap and run mysql_install_db when its needed
+# bash /usr/bin/mysql_install_db \
+#  --auth-root-authentication-method=socket \
+#  --rpm \
+#  --cross-bootstrap \
+#  --user=mysql \
+#  --disable-log-bin \
+#  --skip-test-db 2>&1 | \
+#  $ERR_LOGGER
+
+# - name: start mariadb first time
 #   service:
 #     name: '{{ mariadb_service }}'
 #     state: started
 #   register: service_status
+#   environment:
+#     DEBIAN_SCRIPT_DEBUG: 1
 #   notify:
-#     - wait 20 seconds for clean startup
+#     - wait 10 seconds for clean startup
 #
-# # - name: service state
-# #   debug:
-# #     var: "{{ item }}"
-# #   when: item is defined
-# #   loop:
-# #     - service_status.state
-# #     - service_status.failed
+# - name: service state
+#   debug:
+#     var: "{{ item }}"
+#   when: item is defined
+#   loop:
+#     - service_status.state
+#     - service_status.failed
+
 ...
