--- a/tasks/prepare.yaml
+++ b/tasks/prepare.yaml
@@ -16,6 +16,51 @@
         - default.yaml
       skip: true
 
+- name: merge mariadb configuration segment for server between defaults and custom
+  set_fact:
+    mariadb_config_server: "{{ mariadb_config_defaults_server |
+      combine( mariadb_config_server, recursive=True ) }}"
+
+- name: merge mariadb configuration segment for client between defaults and custom
+  set_fact:
+    mariadb_config_client: "{{ mariadb_config_defaults_client |
+      combine( mariadb_config_client, recursive=True ) }}"
+
+- name: merge mariadb configuration segment for mysql between defaults and custom
+  set_fact:
+    mariadb_config_mysql: "{{ mariadb_config_defaults_mysql |
+      combine( mariadb_config_mysql, recursive=True ) }}"
+
+- name: merge mariadb configuration segment for mysqld between defaults and custom
+  set_fact:
+    mariadb_config_mysqld: "{{ mariadb_config_defaults_mysqld |
+      combine( mariadb_config_mysqld, recursive=True ) }}"
+
+- name: merge mariadb configuration segment for mysqld_safe between defaults and custom
+  set_fact:
+    mariadb_config_mysqld_safe: "{{ mariadb_config_defaults_mysqld_safe |
+      combine( mariadb_config_mysqld_safe, recursive=True ) }}"
+
+- name: merge mariadb configuration segment for mysqldump between defaults and custom
+  set_fact:
+    mariadb_config_mysqldump: "{{ mariadb_config_defaults_mysqldump |
+      combine( mariadb_config_mysqldump, recursive=True ) }}"
+
+- name: merge mariadb configuration segment for galera between defaults and custom
+  set_fact:
+    mariadb_config_galera: "{{ mariadb_config_defaults_galera |
+      combine( mariadb_config_galera, recursive=True ) }}"
+
+- name: merge mariadb configuration segment for emmbedded between defaults and custom
+  set_fact:
+    mariadb_config_embedded: "{{ mariadb_config_defaults_embedded |
+      combine( mariadb_config_embedded, recursive=True ) }}"
+
+- name: merge mariadb custom configurations between defaults and custom
+  set_fact:
+    mariadb_config_custom: "{{ mariadb_config_defaults_custom |
+      combine( mariadb_config_custom, recursive=True ) }}"
+
 - name: make sure dnf is installed (only redhat based <7)
   package:
     name: dnf
@@ -43,9 +88,6 @@
   when:
     - ansible_python.version.major == 2
     - python3_bin_present.stat.exists
-
-- name: do facts module to get latest information
-  setup:
 
 - block:
     - name: add mariadb repository
@@ -113,5 +155,20 @@
   stat:
     path: /usr/sbin/mysqld
   register: mysqld_binary_file
+
+- name: detect if mariadb installed
+  set_fact:
+    mariadb_installed: "{{ mysqld_binary_file.stat.exists }}"
+  when:
+    - mysqld_binary_file is defined
+    - mysqld_binary_file.stat is defined
+
+- debug:
+    msg:
+      - "{{ mysqld_binary_file }}"
+      - "{{ mariadb_installed }}"
+
+- name: do facts module to get latest information
+  setup:
 
 ...
