--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,136 +1,311 @@
 ---
 
-_systemd_lib_directory:
-  default: /lib/systemd/system
-  debian: /lib/systemd/system
-  redhat: /usr/lib/systemd/system
+mariadb_config_defaults_server: {}
 
-_mariadb_server:
-  default: mariadb-server
-  archlinux: mariadb
+mariadb_config_defaults_client:
+  # Default is Latin1, if you need UTF-8 set this (also in server section)
+  default-character-set: utf8mb4
+  # socket location
+  socket: /var/run/mysqld/mysqld.sock
 
-_mariadb_packages:
-  default:
-    - libmariadb-dev
-    - mariadb-server
-    - python-mysqldb
-    - python3-mysqldb
-  archlinux:
-    - mariadb
-    - mariadb-libs
-    - mariadb-clients
-    - python-mysqlclient
-  redhat:
-    - MariaDB-client
-    - MariaDB-devel
-    - MariaDB-server
-    - MariaDB-shared
-    - gcc
-    - make
-    - python3-setuptools
-    - python36-devel
-    - redhat-rpm-config
-  redhat-8:
-    - gcc
-    - make
-    - mariadb
-    - mariadb-common
-    - mariadb-server
-    - mariadb-devel
-    - python3-devel
-    - python3-setuptools
-    - redhat-rpm-config
-  redhat-8-external:
-    - MariaDB-client
-    - MariaDB-devel
-    - MariaDB-server
-    - MariaDB-shared
-    - gcc
-    - make
-    - python3-devel
-    - python3-setuptools
-    - redhat-rpm-config
-  debian:
-    - libmariadb-dev
-    - mariadb-server
-    - python3-mysqldb
-    - python3-pip
-    - python3-setuptools
-  ubuntu:
-    - libmariadb-dev
-    - mariadb-server
-    - python3-mysqldb
-    - python3-pip
-    - python3-setuptools
+  # Example of client certificate usage
+  # ssl-cert: /etc/mysql/client-cert.pem
+  # ssl-key: /etc/mysql/client-key.pem
+  #
+  # Allow only TLS encrypted connections
+  # ssl-verify-server-cert: on
 
-_mariadb_python_packages:
-  default:
-    - name: mysqlclient
-  debian:
-    - name: mysqlclient
-  redhat:
-    - name: mysqlclient
-  archlinux: []
+mariadb_config_defaults_mysql:
+  # Default is Latin1, if you need UTF-8 set this (also in server section)
+  default-character-set: utf8mb4
 
-_mariadb_service:
-  default: mariadb
-  archlinux: mariadb
-  redhat: mariadb
-  debian: mariadb
+mariadb_config_defaults_mysqld:
+  #
+  # * Basic Settings
+  #
+  user: mysql
+  pid-file: /run/mysqld/mysqld.pid
+  socket: /run/mysqld/mysqld.sock
+  #port: 3306
+  basedir: /usr
+  datadir: /var/lib/mysql
+  tmpdir: /tmp
+  lc-messages-dir: /usr/share/mysql
+  #skip-external-locking
+  # Instead of skip-networking the default is now to listen only on
+  # localhost which is more compatible and is not less secure.
+  bind-address: 127.0.0.1
 
-_mariadb_messages_dir:
-  default: /usr/share/mysql
+  #
+  # * Fine Tuning
+  #
+  #key_buffer_size: 16M
+  #max_allowed_packet: 16M
+  #thread_stack: 192K
+  #thread_cache_size: 8
+  # This replaces the startup script and checks MyISAM tables if needed
+  # the first time they are touched
+  #myisam_recover_options: BACKUP
+  #max_connections: 100
+  #table_cache: 64
+  #thread_concurrency: 10
 
-_mariadb_socket:
-  default: /run/mysqld/mysqld.sock
-  archlinux: /run/mysqld/mysqld.sock
-  redhat: /var/lib/mysql/mysql.sock
-  centos: /var/lib/mysql/mysql.sock
-  debian: /run/mysqld/mysqld.sock
+  #
+  # * Query Cache Configuration
+  #
+  #query_cache_limit: 1M
+  query_cache_size: 16M
 
-systemd_lib_directory: "{{
-          _systemd_lib_directory[ansible_os_family | lower] |
-  default(_systemd_lib_directory['default']) }}"
+  #
+  # * Logging and Replication
+  #
+  # Both location gets rotated by the cronjob.
+  # Be aware that this log type is a performance killer.
+  # As of 5.1 you can enable the log at runtime!
+  #general_log_file: /var/log/mysql/mysql.log
+  #general_log: 1
+  #
+  # Error log - should be very few entries.
+  #
+  log_error: /var/log/mysql/error.log
+  #
+  # Enable the slow query log to see queries with especially long duration
+  #slow_query_log_file: /var/log/mysql/mariadb-slow.log
+  #long_query_time: 10
+  #log_slow_rate_limit: 1000
+  #log_slow_verbosity: query_plan
+  #log-queries-not-using-indexes:
+  #
+  # The following can be used as easy to replay backup logs or for replication.
+  # note: if you are setting up a replication slave, see README.Debian about
+  #       other settings you may need to change.
+  #server-id: 1
+  #log_bin: /var/log/mysql/mysql-bin.log
+  expire_logs_days: 10
+  #max_binlog_size: 100M
+  #binlog_do_db: include_database_name
+  #binlog_ignore_db: exclude_database_name
+  #
+  # * Security Features
+  #
+  # Read the manual, too, if you want chroot!
+  #chroot: /var/lib/mysql/
+  #
+  # For generating SSL certificates you can use for example the GUI tool "tinyca".
+  #
+  #ssl-ca: /etc/mysql/cacert.pem
+  #ssl-cert: /etc/mysql/server-cert.pem
+  #ssl-key: /etc/mysql/server-key.pem
+  #
+  # Accept only connections using the latest and most secure TLS protocol version.
+  # ..when MariaDB is compiled with OpenSSL:
+  #ssl-cipher: TLSv1.2
+  # ..when MariaDB is compiled with YaSSL (default in Debian):
+  #ssl: on
 
-mariadb_log_directory: /var/log/mysql
-mariadb_slow_query_log_file: "{{ mariadb_log_directory }}/mysql-slow.log"
-mariadb_log_error: "{{ mariadb_log_directory }}/mysql.error"
+  #
+  # * Character sets
+  #
+  # MySQL/MariaDB default is Latin1, but in Debian we rather default to the full
+  # utf8 4-byte character set. See also client.cnf
+  #
+  character-set-server: utf8mb4
+  collation-server: utf8mb4_general_ci
 
-mariadb_pid_file: /run/mysqld/mysqld.pid
+  #
+  # * InnoDB
+  #
+  # InnoDB is enabled by default with a 10MB datafile in /var/lib/mysql/.
+  # Read the manual for more InnoDB related options. There are many!
 
-mariadb_config_dir: /etc/mysql
-mariadb_config_include_dir: "{{ mariadb_config_dir }}/conf.d"
+  #
+  # * Unix socket authentication plugin is built-in since 10.0.22-6
+  #
+  # Needed so the root database user can authenticate without a password but
+  # only when running as the unix root user.
+  #
+  # Also available for other users if required.
+  # See https://mariadb.com/kb/en/unix_socket-authentication-plugin/
 
-mariadb_server: "{{
-          _mariadb_server[ansible_os_family | lower] |
-  default(_mariadb_server[ansible_distribution | lower ] |
-  default(_mariadb_server['default'])) }}"
+mariadb_config_defaults_mysqld_safe:
+  # This will be passed to all mysql clients
+  # It has been reported that passwords should be enclosed with ticks/quotes
+  # especially if they contain "#" chars...
+  # Remember to edit /etc/mysql/debian.cnf when changing the socket location.
+  socket: /var/run/mysqld/mysqld.sock
+  nice: "0"
+  skip_log_error:
+  syslog:
 
-mariadb_packages: "{{
-          _mariadb_packages[ansible_os_family | lower ~ '-' ~ ansible_distribution_major_version] |
-  default(_mariadb_packages[ansible_os_family | lower] |
-  default(_mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version ~ '-external' if mariadb_use_external_repo else '' ] |
-  default(_mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
-  default(_mariadb_packages[ansible_distribution | lower] |
-  default(_mariadb_packages['default']))))) }}"
+mariadb_config_defaults_mysqldump:
+  quick:
+  quote-names:
+  max_allowed_packet: 16M
 
-mariadb_python_packages: "{{
-          _mariadb_python_packages[ansible_os_family | lower~ '-' ~ ansible_distribution_major_version] |
-  default(_mariadb_python_packages[ansible_os_family | lower] |
-  default(_mariadb_python_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
-  default(_mariadb_python_packages['default']))) }}"
+mariadb_config_defaults_galera: {}
 
-mariadb_service: "{{
-          _mariadb_service[ansible_os_family | lower] |
-  default(_mariadb_service[ansible_distribution | lower ] |
-  default(_mariadb_service['default'])) }}"
+mariadb_config_defaults_embedded: {}
 
-mariadb_messages_dir: "{{
-          _mariadb_messages_dir[ansible_os_family | lower ] |
-  default(_mariadb_messages_dir[ansible_distribution | lower] |
-  default(_mariadb_messages_dir['default'])) }}"
+mariadb_config_defaults_custom:
+  mariadb: {}
+  client-mariadb: {}
+  mysql_upgrade: {}
+  mysqladmin: {}
+  mysqlbinlog: {}
+  mysqlcheck: {}
+  mysqlimport: {}
+  mysqlshow: {}
+  mysqlslap: {}
 
-mariadb_socket: "{{
-          _mariadb_socket[ansible_os_family | lower ] |
-  default(_mariadb_socket[ansible_distribution | lower] |
-  default(_mariadb_socket['default'])) }}"
+systemd_lib_directory: /lib/systemd/system
+
+mariadb_build_packages: []
+
+mariadb_python_packages: []
+
+# package name
+mariadb_server: "mariadb-server"
+
+# service name
+mariadb_service: mariadb
+
+mariadb_socket: /run/mysqld/mysqld.sock
+
+mariadb_installed: false
+
+#mariadb_log_directory: "/var/log/mysql"
+#mariadb_slow_query_log_file: "{{ mariadb_log_directory }}/mysql-slow.log"
+#mariadb_log_error: "{{ mariadb_log_directory }}/mysql.error"
+
+
+# # ---------------------------------------------------
+#
+# _systemd_lib_directory:
+#   default: /lib/systemd/system
+#   debian: /lib/systemd/system
+#   redhat: /usr/lib/systemd/system
+#
+# _mariadb_server:
+#   default: mariadb-server
+#   archlinux: mariadb
+#
+# _mariadb_packages:
+#   default:
+#     - libmariadb-dev
+#     - mariadb-server
+#     - python-mysqldb
+#     - python3-mysqldb
+#   archlinux:
+#     - mariadb
+#     - mariadb-libs
+#     - mariadb-clients
+#     - python-mysqlclient
+#   redhat:
+#     - MariaDB-client
+#     - MariaDB-devel
+#     - MariaDB-server
+#     - MariaDB-shared
+#     - gcc
+#     - make
+#     - python3-setuptools
+#     - python36-devel
+#     - redhat-rpm-config
+#   redhat-8:
+#     - gcc
+#     - make
+#     - mariadb
+#     - mariadb-common
+#     - mariadb-server
+#     - mariadb-devel
+#     - python3-devel
+#     - python3-setuptools
+#     - redhat-rpm-config
+#   redhat-8-external:
+#     - MariaDB-client
+#     - MariaDB-devel
+#     - MariaDB-server
+#     - MariaDB-shared
+#     - gcc
+#     - make
+#     - python3-devel
+#     - python3-setuptools
+#     - redhat-rpm-config
+#   debian:
+#     - libmariadb-dev
+#     - mariadb-server
+#     - python3-mysqldb
+#     - python3-pip
+#     - python3-setuptools
+#   ubuntu:
+#     - libmariadb-dev
+#     - mariadb-server
+#     - python3-mysqldb
+#     - python3-pip
+#     - python3-setuptools
+#
+# _mariadb_python_packages:
+#   default:
+#     - name: mysqlclient
+#   debian:
+#     - name: mysqlclient
+#   redhat:
+#     - name: mysqlclient
+#   archlinux: []
+#
+# _mariadb_service:
+#   default: mariadb
+#   archlinux: mariadb
+#   redhat: mariadb
+#   debian: mariadb
+#
+#
+# _mariadb_socket:
+#   default: /run/mysqld/mysqld.sock
+#   archlinux: /run/mysqld/mysqld.sock
+#   redhat: /var/lib/mysql/mysql.sock
+#   centos: /var/lib/mysql/mysql.sock
+#   debian: /run/mysqld/mysqld.sock
+#
+# systemd_lib_directory: "{{
+#           _systemd_lib_directory[ansible_os_family | lower] |
+#   default(_systemd_lib_directory['default']) }}"
+#
+# mariadb_log_directory: /var/log/mysql
+# mariadb_slow_query_log_file: "{{ mariadb_log_directory }}/mysql-slow.log"
+# mariadb_log_error: "{{ mariadb_log_directory }}/mysql.error"
+#
+# mariadb_pid_file: /run/mysqld/mysqld.pid
+#
+# mariadb_config_dir: /etc/mysql
+# mariadb_config_include_dir: "{{ mariadb_config_dir }}/conf.d"
+#
+# mariadb_server: "{{
+#           _mariadb_server[ansible_os_family | lower] |
+#   default(_mariadb_server[ansible_distribution | lower ] |
+#   default(_mariadb_server['default'])) }}"
+#
+# mariadb_packages: "{{
+#           _mariadb_packages[ansible_os_family | lower ~ '-' ~ ansible_distribution_major_version] |
+#   default(_mariadb_packages[ansible_os_family | lower] |
+#   default(_mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version ~ '-external' if mariadb_use_external_repo else '' ] |
+#   default(_mariadb_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
+#   default(_mariadb_packages[ansible_distribution | lower] |
+#   default(_mariadb_packages['default']))))) }}"
+#
+# mariadb_python_packages: "{{
+#           _mariadb_python_packages[ansible_os_family | lower~ '-' ~ ansible_distribution_major_version] |
+#   default(_mariadb_python_packages[ansible_os_family | lower] |
+#   default(_mariadb_python_packages[ansible_distribution | lower~ '-' ~ ansible_distribution_major_version] |
+#   default(_mariadb_python_packages['default']))) }}"
+#
+# mariadb_service: "{{
+#           _mariadb_service[ansible_os_family | lower] |
+#   default(_mariadb_service[ansible_distribution | lower ] |
+#   default(_mariadb_service['default'])) }}"
+#
+# mariadb_socket: "{{
+#           _mariadb_socket[ansible_os_family | lower ] |
+#   default(_mariadb_socket[ansible_distribution | lower] |
+#   default(_mariadb_socket['default'])) }}"
+
+...
